<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textColor="#F8EEB2"
        android:text="@string/introduction"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/genshin"
        android:justificationMode="inter_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/chara_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:textColor="#F8EEB2"
        android:text="@string/chara_introduction"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        />

    <TextView
        android:id="@+id/details"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:text="@string/details"
        android:fontFamily="@font/genshin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chara_introduction"
        />

    <TextView
        android:id="@+id/chara_weapons_title"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/weapon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details"
        />

    <TextView
        android:id="@+id/chara_weapons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/weapon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/details"
        />

    <TextView
        android:id="@+id/chara_visions_title"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/vision"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chara_weapons"
        />

    <TextView
        android:id="@+id/chara_visions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/vision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/chara_weapons"
        />

    <TextView
        android:id="@+id/chara_constellation_title"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/constellation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chara_visions"
        />

    <TextView
        android:id="@+id/chara_constellations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/constellation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/chara_visions"
        />

    <TextView
        android:id="@+id/chara_affiliation_title"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/affiliation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chara_constellations"
        />

    <TextView
        android:id="@+id/chara_affiliations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/affiliation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/chara_constellations"
        />

    <TextView
        android:id="@+id/chara_birthday_title"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chara_affiliations"
        />

    <TextView
        android:id="@+id/chara_birthdays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:text="@string/birthday"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/chara_affiliations"
        />

    <TextView
        android:id="@+id/special_dish_title"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/dish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chara_birthdays"
        />

    <TextView
        android:id="@+id/chara_dishes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#F8EEB2"
        android:fontFamily="@font/poppins"
        android:text="@string/dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/chara_birthdays"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="271dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
